<resources>
    <string name="app_name">Weather App</string>
    <string name="city_label">Current City not yet set</string>
    <string name="set_city_buttonlabel">Set Current City</string>
    <string name="city_name_label">City Name ( i.e. Charlotte )</string>
    <string name="country_name_label">Country Name ( i.e. US )</string>
    <string name="Search_city_label">Search City</string>
    <string name="headline_label">Headline</string>
    <string name="temp_label">Temperature:</string>
    <string name="Condition_label">Condition</string>
    <string name="day_label">Day</string>
    <string name="night_label">Night</string>
    <string name="more_details">Click here for more details</string>
    <string name="extended_forecast">Click here for extended forecast</string>
    <string name="save_city">Save city</string>
    <string name="set_as_current_city">Set as current city</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="city_deails">Enter city details</string>
    <string name="enter_city">Enter Your City</string>
    <string name="Enter_country">Enter Your Country</string>
    <string name="Cancel">Cancel</string>
    <string name="Set">Set</string>
    <string-array name="listArray">
        <item>Celcius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="listValues">
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>
